# localRAGvault

./: .gitignore  README.md  database.py  main.py  pyproject.toml  test_search.py  utils.py
core/: api.py  config.py  database.py  extractors.py  logging_config.py  schemas.py  utils.py
tests/: conftest.py  test_api.py  test_ask.py  test_upload.py
ui/: app.py
