[project]
name = "localragvault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "ollama>=0.6.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "ruff>=0.15.22",
    "streamlit>=1.56.0",
    "ty>=0.0.60",
    "uvicorn>=0.45.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests that require a real local LLM (deselect with '-m \"not integration\"')"
]
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["uploads", "logs"]

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort, B: bugbear
select = ["E", "F", "I", "B"]
# B008 is required for FastAPI's File(...) and Form(...) syntax
ignore = ["B008", "E501"]
